Jexxa 9.0.0 (#450)
* added minio instance for build process

* implemented kafka sender

* Updated Tutorial

* Updated Tutorial to jexxa 9.0.0

* Use new ESP-Binding

* - corrected package: ..bockstore -> ..boockstorecn

- Minor Fix in pom so that jacoco is used without tcp server

* Update to java25

* Update to java25

* Updated example

* Added stack with CN-Components (s3-storage and kafka broker)

* Update dependencies (#449)

* Bump org.junit.jupiter:junit-jupiter-params from 6.0.0 to 6.0.1

* Bump org.junit.platform:junit-platform-launcher from 6.0.0 to 6.0.1

* Bump org.junit.jupiter:junit-jupiter-engine from 6.0.0 to 6.0.1

* Bump org.apache.activemq:artemis-jms-client from 2.43.0 to 2.44.0

---------

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* Improved tutorial

---------

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>